# music-player

./: Cargo.toml
.zed/: tasks.json
src/: audio.rs  main.rs  mpris.rs  resampler.rs
src/mpris/: media_player2.rs
