package={name='music-player', version='0.0.0', authors=['Matthias Fauconneau <matthias.fauconneau@gmail.com>'], edition= '2024'}
build-dependencies={wgsl = {git='https://github.com/Matthias-Fauconneau/ui'}}

[dependencies]
fehler='*'
anyhow='*'
url='*'
rand='*'
rustix={version='*', features=['fs','event','mm']}
walkdir='*'
parking_lot='*'

symphonia={default-features=false, features= ['flac'], version='*'}

num={git='https://github.com/Matthias-Fauconneau/num'}
realfft='*'

ui={git='https://github.com/Matthias-Fauconneau/ui', optional=true}
vulkano={git='https://github.com/vulkano-rs/vulkano', default-features=false, features=['macros'], optional=true}
vulkano-spirv={git='https://github.com/Matthias-Fauconneau/vulkano-spirv', optional=true}
bytemuck={version='*', optional=true}

image={git='https://github.com/Matthias-Fauconneau/image'}
image-io={package='image', version='*'}

zbus={version='*', optional=true}
async-std={features=['attributes'], version='*', optional=true}

xdg-user='*'

[features]
resample=[]
zbus=['dep:zbus','async-std']
ui=['dep:ui', 'dep:vulkano', 'dep:vulkano-spirv', 'dep:bytemuck']
default=['ui']

[patch.'https://github.com/vulkano-rs/vulkano']
vulkano={ git='https://github.com/Matthias-Fauconneau/vulkano'  } # drm modifier
[patch.crates-io] # In case vulkano-spirv would depend on crates-io version. But currently it tracks git version (breaking changes in vulkano::shader::spirv))
vulkano={ git='https://github.com/Matthias-Fauconneau/vulkano' } # drm modifier

[patch.'https://github.com/Matthias-Fauconneau/ui']
ui={path='../ui'}
